# qutrunk

./: .gitignore  CONTRIBUTING.md  README.md  Release_Notes.md  build.py  packaging_exec.md  pyproject.toml  pytest.ini  requirements.txt
qutrunk/: LICENSE  __init__.py  exceptions.py
qutrunk/algorithm/: vqe.py  vqe_demo.py
qutrunk/backends/: __init__.py  backend.py  local.py  qusaas-demo.py  qusaas.py  result.py
qutrunk/circuit/: __init__.py  bit.py  circuit.py  classical_bit.py  classical_reg.py  command.py  counter.py  parameter.py  qubit.py  qureg.py
qutrunk/config/: __init__.py  config.yaml  qubox.yaml  qulocal.yaml  qusaas.yaml
qutrunk/converters/: __init__.py  ast_to_dag.py  circuit_to_dag.py  dag_to_circuit.py  mapping.py
qutrunk/dagcircuit/: __init__.py  dagcircuit.py  dagnode.py
qutrunk/doc/: coding_style.md  distribute_package.md  project_documentation.md
qutrunk/example/: __init__.py  addition.py  allgates.py  allgates.qasm  bell_pair.py  bell_pair.py.orig  bell_pair.qasm  bell_pair.qusl  bernstein_vazirani.py  decrement.py  demo.ipynb  deutsch.py  ghz.py  grover.py  grover_distribute.py  grover_gpu.py  increment.py  increment_decrement.py  increment_decrement.py.orig  openqasm_parse.py  paddle1.py  paddle_demo1.py  phase_estimation.py  phase_kickback.py  qft.py  qusl_parse.py  qusl_to_circuit.py  qutrunk_mindspore.py  qutrunk_paddle.py  qutrunk_pytorch.py  random_byte.py  saas_demo.py  subtract.py  superdense.py  teleport.py  tensorflow_quantum_demo.py  test.py
qutrunk/qasm/: __init__.py  exceptions.py  qasm.py  qasmlexer.py  qasmparser.py
qutrunk/qml/: __init__.py  circuit_qnn.py  interface.py  neural_network.py  qnn.py
qutrunk/sim/local/: CMakeLists.txt  README.md  __init__.py  build_sim.sh  cppsim.cpp  local_cpp.py  local_python.py  pysim.py
qutrunk/sim/local/QuEST/: CMakeLists.txt  build_quest.sh
qutrunk/sim/local/pybind11/tests/: conftest.py  test_buffers.py  test_builtin_casters.py  test_callbacks.py  test_class.py  test_copy_move.py  test_eigen.py  test_exceptions.py  test_factory_constructors.py  test_kwargs_and_defaults.py  test_local_bindings.py  test_methods_and_attributes.py  test_modules.py  test_multiple_inheritance.py  test_numpy_array.py  test_operator_overloading.py  test_sequences_and_iterators.py  test_smart_ptr.py  test_stl.py  test_virtual_functions.py
qutrunk/test/: a.qusl  b.qasm  backend_fixture.py  global_parameters.py  test_allgates.py  test_amplitudes.py  test_backend.py  test_cr.py  test_cux.py  test_exp.py  test_exporter.py  test_gates.py  test_ibmbackend.py  test_inverse_gates  test_iswap.py  test_qft.py  test_u1u2u3.py  test_x1y1z1.py
qutrunk/tools/: __init__.py  algorithm.py  check.py  check_sprout.py  env_reader.py  function_time.py  get_config.py  ide_parameter.json  platform.py  produce_algorithm.py  qusl.py  qusl_parse.py  random_circuit.py  read_qubox.py  result.json  set_config.py
qutrunk/visualizations/: __init__.py  circuit_visualization.py  layer.py  text.py  text_draw_element.py  utils.py
qutrunk_tutorial/: backend.rst  circuit.rst  conf.py  gate.rst  index.rst  operator.rst  result.json
qutrunk_tutorial/Bpp/: backends.rst
qutrunk_tutorial/Cpp1/: converters.rst
qutrunk_tutorial/Cpp2/: circuit.rst
qutrunk_tutorial/Cpp3/: gates.rst
qutrunk_tutorial/Cpp4/: ops.rst
qutrunk_tutorial/Dpp/: dagcircuit.rst
qutrunk_tutorial/Epp1/: example.rst
qutrunk_tutorial/Epp2/: exceptions.rst
qutrunk_tutorial/Gate/: gate1.rst  gate2.rst
qutrunk_tutorial/Introduce/: Quantum assembly of qusl.rst  demo.rst  install.rst  introduce.rst
qutrunk_tutorial/Qpp/: qasm.rst
qutrunk_tutorial/Qpp1/: qasm.rst
qutrunk_tutorial/Qpp2/: qutrunk.rst
qutrunk_tutorial/Release Notes/: notes.rst
qutrunk_tutorial/Spp/: sim.rst
qutrunk_tutorial/Tpp/: tools.rst
qutrunk_tutorial/User_Manual/: QuTrunk使用指导-Qutrunk量子线路v1.0.md  QuTrunk使用指导-量子计算后端v1.0.md  QuTrunk使用指导-量子门基本操作v1.0.md  QuTunk使用指导-量子算符v1.0.md  Qutrunk 量子编程介绍.md  Qutrunk与MinsSpore结合实践 .md  Qutrunk与Paddle结合实践.md  Qutrunk快速上手指导v1.0.md  Qutrunk快速上手指导（安装部署及hello world）.md
qutrunk_tutorial/Vpp/: visualizations.rst
qutrunk_tutorial/source/: backends.qusprout.rst  backends.rst  circuit.rst  converters.rst  dagcircuit.rst  example.rst  modules.rst  qasm.node.rst  qasm.rst  qutrunk.algorithm.rst  qutrunk.backends.local.rst  qutrunk.backends.qusaas.rst  qutrunk.backends.qusprout.rst  qutrunk.circuit.rst  qutrunk.config.rst  qutrunk.converters.rst  qutrunk.dagcircuit.rst  qutrunk.qasm.rst  qutrunk.qml.about_pyqanda.rst  qutrunk.qml.about_spinqkit.rst  qutrunk.qml.gradient.rst  qutrunk.qml.huawei_mindspore.rst  qutrunk.qml.ops_examples.rst  qutrunk.qml.qiskit_demo.rst  qutrunk.qml.qiskit_pytorch.rst  qutrunk.qml.qudoor_qutrunk.rst  qutrunk.qml.qutrunk_pytorch.rst  qutrunk.qml.rst  qutrunk.rst  qutrunk.sim.local.rst  qutrunk.sim.qusprout.code.rst  qutrunk.sim.qusprout.qusprout.rst  qutrunk.sim.qusprout.qusproutdata.rst  qutrunk.sim.qusprout.rst  qutrunk.sim.rst  qutrunk.test.backend.rst  qutrunk.test.circuit.rst  qutrunk.test.gate.rst  (+8 more)
(+452 files in other folders)
