[tool.poetry]
name = "qutrunk"
version = "0.2.1"
description = "qutrunk is an open source library for quantum computing."
authors = ["qudoorzh2022 <qudoorzh2022@163.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "http://www.qudoor.com/"
repository = "https://github.com/queco-quantum/qutrunk"
documentation = "http://developer.queco.cn/qutrunk_api/"
keywords = ["qutrunk", "quantum", "sdk"]
exclude = ["qutrunk/test"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pyyaml = "^6.0"
thrift = "^0.15.0"
numpy = "^1.21.6"
ply = "^3.11"
requests = "^2.27.1"
networkx = "^2.8"
retworkx = "^0.11.0"
mpi4py = { version = "^3.1.4", optional = true }
amazon-braket-sdk = { version = "^1.32.0", optional = true }
numba = { version = "^0.56.4", optional = true }

[tool.poetry.extras]
braket = ["amazon-braket-sdk"]
parallel = ["mpi4py"]
gpu = ["numba"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
sphinx = "^5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple"
